--- a/KanskeKulSpel/src/Misc/Todo.txt
+++ b/KanskeKulSpel/src/Misc/Todo.txt
@@ -1,1 +1,5 @@
 Something probably
+
+https://www.sfml-dev.org/tutorials/2.5/graphics-vertex-array.php - could be smart for the terrain
+
+collision crashes sometiems.
